fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,8 @@
 
 @layer base {
     html {
-        overflow-x: hidden
+        height: 100vh;
+        overflow: hidden;
     }
 
     img {
@@ -24,7 +25,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    @apply bg-orange-darker
+    @apply bg-orange-sempoa
 }
 
 #male-checkbox:checked ~ .check-1{
